tests/language_modules/08_routines/invalid_semantics/procedure_return_value.vf
module ProcedureReturnValue

procedure main()
is
    return 1
end main

end ProcedureReturnValue